--- a/frontend/index.html
+++ b/frontend/index.html
@@ -150,7 +150,7 @@
 
     <div class="feature-card feature-2">
       <span class="feature-badge">Feature 2</span>
-      <img src="assests/SentimentIcon.png" alt="Comedy and tragedy masks" />
+      <img src="assests/EmotionalIcon.png" alt="Comedy and tragedy masks" />
       <p>
         See whether your tone leans positive, negative, or neutral. Get a quick
         glance at the emotional direction of your work.
@@ -168,7 +168,7 @@
 
     <div class="feature-card feature-4">
       <span class="feature-badge">Feature 4</span>
-      <img src="assests/EmotionalIcon.png" alt="Heart symbols" />
+      <img src="assests/SentimentIcon.png" alt="Heart symbols" />
       <p>
         Explore emotional tones and sensory cues. Understand the feelings your
         writing evokes through data-driven insights.
@@ -199,20 +199,28 @@
       <p class="slide-desc">Click arrows for Next Slide</p>
     </div>
     <div class="slide-right">
-      <img src="assets/feature1a.jpg" alt="Feature image 1">
-      <img src="assets/feature1b.jpg" alt="Feature image 2">
+      <img src="assests/feature1a.jpg" alt="Feature image 1">
+      <img src="assests/feature1b.jpg" alt="Feature image 2">
     </div>
   </div>
 
   <div class="slide" style="--bg-color:#8C331C;">
     <div class="slide-left">
-      <img src="assets/feature2a.jpg" alt="Feature image">
-      <p class="slide-desc">Feature description</p>
+      <img src="assests/feature2a.jpg" alt="Feature image">
+    <p class="slide-desc">
+  <ul class="feature-points">
+    <li>Highlights the most common and meaningful words in your text.</li>
+    <li>Helps identify which ideas or terms appear most often.</li>
+    <li>Shows whether your focus matches your intended topic.</li>
+    <li><strong>Chart Type:</strong> Bar chart displaying word frequency.</li>
+  </ul>
+</p>
+
     </div>
     <div class="slide-right">
       <p class="slide-num">#1</p>
       <h2 class="slide-title">KEYWORD<br><em>& Frequency</em></h2>
-      <img src="assets/feature2b.jpg" alt="Feature image">
+      <img src="assests/feature2b.png" alt="Feature image">
     </div>
   </div>
 
@@ -220,23 +228,39 @@
     <div class="slide-left">
       <p class="slide-num">#2</p>
       <h2 class="slide-title">THEMES<br><em>& Clusters</em></h2>
-      <img src="assets/feature3a.jpg" alt="Feature image">
+      <img src="assests/feature3a.png" alt="Feature image">
     </div>
     <div class="slide-right">
-      <img src="assets/feature3b.jpg" alt="Feature image">
-      <p class="slide-desc">Feature description</p>
+      <img src="assests/feature3b.jpg" alt="Feature image">
+<p class="slide-desc">
+  <ul class="feature-points">
+    <li>Groups related words into visual clusters based on meaning.</li>
+    <li>Each bubble represents a recurring theme in your writing.</li>
+    <li>Helps you see the main subjects and their relationships.</li>
+    <li><strong>Chart Type:</strong> Bubble chart showing thematic clusters.</li>
+  </ul>
+</p>
+
     </div>
   </div>
 
   <div class="slide" style="--bg-color:#8C331C;">
     <div class="slide-left">
-      <img src="assets/feature4a.jpg" alt="Feature image">
-      <p class="slide-desc">Feature description</p>
+      <img src="assests/feature4a.jpg" alt="Feature image">
+<p class="slide-desc">
+  <ul class="feature-points">
+    <li>Reveals the emotional tone of your text as positive, neutral, or negative.</li>
+    <li>Helps you understand your message’s emotional balance.</li>
+    <li>Useful for adjusting tone to match your intent.</li>
+    <li><strong>Chart Type:</strong> Doughnut chart showing sentiment distribution.</li>
+  </ul>
+</p>
+
     </div>
     <div class="slide-right">
       <p class="slide-num">#3</p>
       <h2 class="slide-title"><em>Sentiments</em></h2>
-      <img src="assets/feature4b.jpg" alt="Feature image">
+      <img src="assests/feature4b.png" alt="Feature image">
     </div>
   </div>
 
@@ -244,11 +268,19 @@
     <div class="slide-left">
       <p class="slide-num">#4</p>
       <h2 class="slide-title">EMOTIONAL<br><em>Patterns</em></h2>
-      <img src="assets/feature5a.jpg" alt="Feature image">
+      <img src="assests/feature5a.png" alt="Feature image">
     </div>
     <div class="slide-right">
-      <img src="assets/feature5b.jpg" alt="Feature image">
-      <p class="slide-desc">Feature description</p>
+      <img src="assests/feature5b.jpg" alt="Feature image">
+<p class="slide-desc">
+  <ul class="feature-points">
+    <li>Reveals the emotional tone of your text as positive, neutral, or negative.</li>
+    <li>Helps you understand your message’s emotional balance.</li>
+    <li>Useful for adjusting tone to match your intent.</li>
+    <li><strong>Chart Type:</strong> Doughnut chart showing sentiment distribution.</li>
+  </ul>
+</p>
+
     </div>
   </div>
 
