--- a/frontend/loading.html
+++ b/frontend/loading.html
@@ -197,7 +197,7 @@
   }
 
   try {
-    const res = await fetch("https://ink-insights-backend.vercel.app/analyze", {
+    const res = await fetch("https://ink-insights-backend.onrender.com/analyze"", {
       method: "POST",
       headers: { "Content-Type": "application/json" },
       body: JSON.stringify({ text, filename: meta.name })
