--- a/frontend/loading.html
+++ b/frontend/loading.html
@@ -163,28 +163,80 @@
 })();
 
 /* ========= LOADING PROGRESS & API CALL ========= */
-(async function(){
-  const fill=document.getElementById('fill');
-  const pct=document.getElementById('pct');
-  const bar=document.querySelector('.bar');
-  const duration=11000;
-  const start=performance.now();
-  let apiDone = false;
+(async function () {
+  const fill = document.getElementById("fill");
+  const pct = document.getElementById("pct");
+  const bar = document.querySelector(".bar");
+  const msg = document.getElementById("loadMsg");
+
   let progress = 0;
+  let apiDone = false;
+  let interval;
 
-  function easeInOutCubic(x){return x<0.5?4*x*x*x:1-Math.pow(-2*x+2,3)/2;}
-
-  function step(ts){
-    const p=Math.min((ts-start)/duration,1);
-    const eased=easeInOutCubic(p);
-    progress=Math.floor(eased*100);
-    fill.style.width=progress+"%";
-    pct.textContent=progress+"%";
-    bar.setAttribute("aria-valuenow",progress);
-    if(p<1){requestAnimationFrame(step);}
-    else if(apiDone){finish();}
+  // smooth progress animation
+  function updateBar(value) {
+    progress = Math.min(value, 100);
+    fill.style.width = progress + "%";
+    pct.textContent = progress + "%";
+    bar.setAttribute("aria-valuenow", progress);
   }
-  requestAnimationFrame(step);
+
+  // ⏩ Progressive timer — fills steadily until 90%
+  interval = setInterval(() => {
+    if (progress < 90) updateBar(progress + Math.random() * 3);
+  }, 200);
+
+  const meta = JSON.parse(localStorage.getItem("ink_report_meta") || "{}");
+  const text = localStorage.getItem("ink_text") || "";
+
+  if (!text) {
+    alert("No text found. Please upload your file again.");
+    window.location.href = "upload.html";
+    return;
+  }
+
+  try {
+    const res = await fetch("https://ink-insights-backend.onrender.com/analyze", {
+      method: "POST",
+      headers: { "Content-Type": "application/json" },
+      body: JSON.stringify({ text, filename: meta.name }),
+    });
+
+    if (!res.ok) {
+      const err = await res.json().catch(() => ({}));
+      alert("Error: " + (err.error || res.statusText));
+      window.location.href = "upload.html";
+      return;
+    }
+
+    const data = await res.json();
+    localStorage.setItem("ink_results", JSON.stringify(data));
+    apiDone = true;
+
+    // instantly finish progress
+    clearInterval(interval);
+    let done = progress;
+    const endAnim = setInterval(() => {
+      done += 5;
+      updateBar(done);
+      if (done >= 100) {
+        clearInterval(endAnim);
+        finish();
+      }
+    }, 40);
+  } catch (err) {
+    console.error(err);
+    alert("Network or server error — please try again later.");
+    window.location.href = "upload.html";
+  }
+
+  function finish() {
+    msg.textContent = "Loading complete — launching dashboard...";
+    setTimeout(() => {
+      window.location.href = "dashboard.html";
+    }, 600);
+  }
+})();
 
   // ===== BACKEND CALL =====
   const meta = JSON.parse(localStorage.getItem("ink_report_meta")||"{}");
